header dropdown,resource link issue and dropdown alignment

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -57,9 +57,8 @@
 .fa-angle-down {
   font-size: 16px;
 }
-
 .dropdown-menu{
-  margin-left: -20%;
+  //margin-left: -20%;
   min-width: 200px;
   border: 0;
   box-shadow: 0 3px 7px 0 rgba(0, 0, 0, .13), 0 1px 2px 0 rgba(0, 0, 0, .11);
@@ -67,10 +66,10 @@
   border-bottom-right-radius: 15px;
 }
 .dropdown-menu li{
-  padding: 0 10px;
+  padding: 0 5px;
 }
 .dropdown-menu li a{
-  padding: 10px 0 10px 20px;
+  padding: 10px 0 10px 10px;
   transition: 1s;
 }
 .dropdown-menu li a:hover{
@@ -80,7 +79,9 @@
   transition: 1s ease-in-out;
   color: black;
 }
-
+.dropdown-item{
+  text-align: start;
+}
 //----------
 .dropdown-menu li ul{
   display: none;
@@ -169,9 +170,9 @@
   .nav-item {
     margin: 0 8px;
   }
-  .dropdown-menu{
-    margin-left: -15px;
-  }
+  //.dropdown-menu{
+  //  margin-left: -15px;
+  //}
 
 }
   @media screen and (max-width: 1300px) {
